--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-# build outputs
-languages/c/multi
-languages/cpp/multi
-languages/go/multi
-languages/rust/multi
-languages/java/out
-languages/kotlin/Multi.jar
-languages/csharp/out
-languages/swift/multi
-
 # caches & temp
 __pycache__/
 *.pyc
@@ -19,3 +9,4 @@ obj/
 # Node.js dependencies
 node_modules/
 package-lock.json
+bun.lock
